--- a/src/about.html
+++ b/src/about.html
@@ -204,7 +204,7 @@
   <main>
 
     <!-- About　セクション -->
-    <section class="sub-about layout-sub-about">
+    <section class="sub-about layout-sub-about ornament">
       <div class="inner">
         <div class="sub-about__wrap">
           <h2 class="sub-about__title">Dive into<br>the Ocean</h2>
