--- a/src/campaign.html
+++ b/src/campaign.html
@@ -202,7 +202,7 @@
 
   <!-- メインセクション -->
   <main>
-    <section class="archive-campaign layout-archive-campaign">
+    <section class="archive-campaign layout-archive-campaign ornament">
       <div class="inner">
         <!-- タブメニュー -->
         <div class="archive-campaign__tab tab">
@@ -211,7 +211,6 @@
           <a href="#" class="tab__item">ファンダイビング</a>
           <a href="#" class="tab__item">体験ダイビング</a>
         </div>
-
         <!-- カードリスト -->
         <div class="archive-campaign__items campaign-cards">
           <article class="campaign-cards__item campaign-card">
@@ -315,7 +314,6 @@
             </div>
           </article>
         </div>
-
         <!-- ページネーション -->
         <div class="archive-campaign__pagination">
           <div class="wp-pagenavi">
