--- a/src/contact.html
+++ b/src/contact.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="sub-contact layout-sub-contact">
+    <section class="sub-contact layout-sub-contact ornament">
       <div class="inner">
         <form id="contactForm" class="sub-contact__form form">
           <dl class="form__items">
@@ -263,7 +263,6 @@
         </form>
       </div>
     </section>
-
   </main>
 
   <!-- フッター -->
