--- a/src/privacy.html
+++ b/src/privacy.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="privacy layout-privacy">
+    <section class="privacy layout-privacy ornament">
       <div class="inner">
         <div class="privacy__container">
           <h2 class="privacy__title">プライバシーポリシー</h2>
