--- a/src/sitemap.html
+++ b/src/sitemap.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="sitemap layout-sitemap">
+    <section class="sitemap layout-sitemap ornament">
       <div class="inner">
         <!-- サイトマップリンク -->
         <div class="sitemap__container">
@@ -222,9 +222,9 @@
               <li class="sitemap__item">
                 <a href="./information.html">ダイビング情報</a>
                 <ul class="sitemap__sub-items">
-                  <li class="sitemap__sub-item"><a href="./information.html">ライセンス講習</a></li>
-                  <li class="sitemap__sub-item"><a href="./information.html">体験ダイビング</a></li>
-                  <li class="sitemap__sub-item"><a href="./information.html">ファンダイビング</a></li>
+                  <li class="sitemap__sub-item"><a href="./information.html#tab01">ライセンス講習</a></li>
+                  <li class="sitemap__sub-item"><a href="./information.html#tab03">体験ダイビング</a></li>
+                  <li class="sitemap__sub-item"><a href="./information.html#tab02">ファンダイビング</a></li>
                 </ul>
               </li>
               <li class="sitemap__item"><a href="./blog.html">ブログ</a></li>
@@ -236,9 +236,9 @@
               <li class="sitemap__item">
                 <a href="./price.html">料金一覧</a>
                 <ul class="sitemap__sub-items">
-                  <li class="sitemap__sub-item"><a href="./price.html">ライセンス講習</a></li>
-                  <li class="sitemap__sub-item"><a href="./price.html">体験ダイビング</a></li>
-                  <li class="sitemap__sub-item"><a href="./price.html">ファンダイビング</a></li>
+                  <li class="sitemap__sub-item"><a href="./price.html#priceLicence">ライセンス講習</a></li>
+                  <li class="sitemap__sub-item"><a href="./price.html#priceExperience">体験ダイビング</a></li>
+                  <li class="sitemap__sub-item"><a href="./price.html#priceFun">ファンダイビング</a></li>
                 </ul>
               </li>
             </ul>
