--- a/src/faq.html
+++ b/src/faq.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="faq layout-faq">
+    <section class="faq layout-faq ornament">
       <div class="inner">
 
         <!-- 質問リスト -->
