--- a/src/information.html
+++ b/src/information.html
@@ -202,9 +202,8 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="info layout-info">
+    <section class="info layout-info ornament">
       <div class="inner">
-
         <!-- タブメニュー -->
         <ul class="info__tab">
           <li class="info__tab-item js-tab-button is-active"><span>ライセンス</span><span>講習</span>
@@ -212,7 +211,6 @@
           <li class="info__tab-item js-tab-button"><span>ファン</span><span>ダイビング</span></li>
           <li class="info__tab-item js-tab-button"><span>体験</span><span>ダイビング</span></li>
         </ul>
-
         <!-- タブコンテンツ -->
         <div class="info__contents">
           <article class="info__content js-tab-content is-active" id="tab01">
