--- a/src/single-blog.html
+++ b/src/single-blog.html
@@ -201,7 +201,7 @@
     </div>
   </div>
 
-  <div class="layout-content">
+  <div class="layout-content ornament">
     <div class="inner">
       <div class="layout-column">
         <!-- メイン　セクション -->
