--- a/src/terms.html
+++ b/src/terms.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="terms layout-terms">
+    <section class="terms layout-terms ornament">
       <div class="inner">
         <div class="terms__container">
           <h2 class="terms__title">利用規約</h2>
