下層ページ レイアウト共通化

--- a/src/about.html
+++ b/src/about.html
@@ -202,9 +202,8 @@
 
   <!-- メイン　セクション -->
   <main>
-
     <!-- About　セクション -->
-    <section class="sub-about layout-sub-about ornament">
+    <section class="sub-about layout-sub-contents ornament">
       <div class="inner">
         <div class="sub-about__wrap">
           <h2 class="sub-about__title">Dive into<br>the Ocean</h2>
