--- a/src/blog.html
+++ b/src/blog.html
@@ -200,7 +200,7 @@
     </div>
   </div>
 
-  <div class="layout-content ornament">
+  <div class="layout-sub-contents ornament">
     <div class="inner">
       <div class="layout-column">
         <!-- メイン　セクション -->
