--- a/src/contact.html
+++ b/src/contact.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="sub-contact layout-sub-contact ornament">
+    <section class="sub-contact layout-sub-contents ornament">
       <div class="inner">
         <form id="contactForm" class="sub-contact__form form">
           <dl class="form__items">
