--- a/src/information.html
+++ b/src/information.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="info layout-info ornament">
+    <section class="info layout-sub-contents ornament">
       <div class="inner">
         <!-- タブメニュー -->
         <ul class="info__tab">
