--- a/src/campaign.html
+++ b/src/campaign.html
@@ -202,7 +202,7 @@
 
   <!-- メインセクション -->
   <main>
-    <section class="archive-campaign layout-archive-campaign ornament">
+    <section class="archive-campaign layout-sub-contents ornament">
       <div class="inner">
         <!-- タブメニュー -->
         <div class="archive-campaign__tab tab">
