--- a/src/price.html
+++ b/src/price.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="sub-price layout-sub-price ornament">
+    <section class="sub-price layout-sub-contents ornament">
       <div class="inner">
         <div class="sub-price__container">
           <!-- 料金ブロック -->
