--- a/src/sitemap.html
+++ b/src/sitemap.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="sitemap layout-sitemap ornament">
+    <section class="sitemap layout-sub-contents ornament">
       <div class="inner">
         <!-- サイトマップリンク -->
         <div class="sitemap__container">
