--- a/src/voice.html
+++ b/src/voice.html
@@ -202,7 +202,7 @@
 
   <!-- メイン　セクション -->
   <main>
-    <section class="archive-voice layout-archive-voice ornament">
+    <section class="archive-voice layout-sub-contents ornament">
       <div class="inner">
         <!-- タブメニュー -->
         <div class="archive-voice__tab tab">
