フッター・404 レイアウト修正

--- a/src/404.html
+++ b/src/404.html
@@ -211,7 +211,7 @@
   </div>
 
   <!-- フッター -->
-  <footer class="footer layout-footer">
+  <footer class="footer layout-footer--mt0">
     <div class="footer__inner inner">
       <div class="footer__logo-wrap">
         <!-- ロゴ -->
