--- a/src/contact-thanks.html
+++ b/src/contact-thanks.html
@@ -214,7 +214,7 @@
   </main>
 
   <!-- フッター -->
-  <footer class="footer layout-footer layout-footer--mt0">
+  <footer class="footer layout-footer--contact">
     <div class="footer__inner inner">
       <div class="footer__logo-wrap">
         <!-- ロゴ -->
