--- a/src/contact.html
+++ b/src/contact.html
@@ -266,7 +266,7 @@
   </main>
 
   <!-- フッター -->
-  <footer class="footer layout-footer">
+  <footer class="footer layout-footer--contact">
     <div class="footer__inner inner">
       <div class="footer__logo-wrap">
         <!-- ロゴ -->
