フォームバリデーション　実装

--- a/src/contact.html
+++ b/src/contact.html
@@ -249,7 +249,7 @@
             <div class="form__item">
               <dt class="form__label">お問い合わせ内容<span>必須</span></dt>
               <dd class="form__textarea">
-                <textarea id="meddage" name="message"></textarea>
+                <textarea id="message" name="message"></textarea>
               </dd>
             </div>
           </dl>
