--- a/src/campaign.html
+++ b/src/campaign.html
@@ -245,7 +245,7 @@
             <div class="campaign-card__body campaign-card__body--sub">
               <span class="campaign-card__category">体験ダイビング</span>
               <h2 class="campaign-card__title campaign-card__title--sub">貸切体験ダイビング</h2>
-              <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+              <p class="campaign-card__text campaign-card__text--sub">全部コミコミ(お一人様)</p>
               <div class="campaign-card__price">
                 <p class="campaign-card__before-price">¥24,000</p>
                 <p class="campaign-card__after-price campaign-card__after-price--sub">¥18,000</p>
@@ -270,7 +270,7 @@
             <div class="campaign-card__body campaign-card__body--sub">
               <span class="campaign-card__category">体験ダイビング</span>
               <h2 class="campaign-card__title campaign-card__title--sub">ナイトダイビング</h2>
-              <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+              <p class="campaign-card__text campaign-card__text--sub">全部コミコミ(お一人様)</p>
               <div class="campaign-card__price">
                 <p class="campaign-card__before-price">¥10,000</p>
                 <p class="campaign-card__after-price campaign-card__after-price--sub">¥8,000</p>
@@ -295,7 +295,7 @@
             <div class="campaign-card__body campaign-card__body--sub">
               <span class="campaign-card__category">ファンダイビング</span>
               <h2 class="campaign-card__title campaign-card__title--sub">貸切ファンダイビング</h2>
-              <p class="campaign-card__text">全部コミコミ(お一人様)</p>
+              <p class="campaign-card__text campaign-card__text--sub">全部コミコミ(お一人様)</p>
               <div class="campaign-card__price">
                 <p class="campaign-card__before-price">¥20,000</p>
                 <p class="campaign-card__after-price campaign-card__after-price--sub">¥16,000</p>
@@ -313,6 +313,7 @@
               </div>
             </div>
           </article>
+
         </div>
         <!-- ページネーション -->
         <div class="archive-campaign__pagination">
