--- a/src/contact.html
+++ b/src/contact.html
@@ -229,8 +229,8 @@
               <dd class="form__check">
                 <label><input type="checkbox" name="inquiryType"
                     value="diving01"><span>ダイビング講習について</span></input></label>
-                <label><input type="checkbox" name="inquiryType" value="diving02"><span>ファンダイビング</span></input></label>
-                <label><input type="checkbox" name="inquiryType" value="diving03"><span>体験ダイビング</span></input></label>
+                <label><input type="checkbox" name="inquiryType" value="diving02"><span>ファンダイビングについて</span></input></label>
+                <label><input type="checkbox" name="inquiryType" value="diving03"><span>体験ダイビングについて</span></input></label>
               </dd>
             </div>
             <div class="form__item">
