--- a/src/index.html
+++ b/src/index.html
@@ -666,7 +666,7 @@
     </section>
 
     <!-- お問い合わせ　セクション -->
-    <section class="contact layout-contact">
+    <section class="contact layout-contact--top">
       <div class="contact__inner inner">
         <div class="contact__container">
           <div class="contact__left">
