--- a/src/voice.html
+++ b/src/voice.html
@@ -211,7 +211,6 @@
           <a href="#" class="tab__item">ファンダイビング</a>
           <a href="#" class="tab__item">体験ダイビング</a>
         </div>
-
         <!-- カードリスト -->
         <div class="archive-voice__items voice-cards">
           <article class="voice-cards__item voice-card">
@@ -224,7 +223,7 @@
                 <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
               <figure class="voice-card__img">
-                <img src="../assets/images/top/img-voice01.jpg" alt="">
+                <img src="./assets/images/top/img-voice01.jpg" alt="">
               </figure>
             </div>
             <div class="voice-card__body">
@@ -245,7 +244,7 @@
                 <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
               <figure class="voice-card__img">
-                <img src="../assets/images/top/img-voice02.jpg" alt="">
+                <img src="./assets/images/top/img-voice02.jpg" alt="">
               </figure>
             </div>
             <div class="voice-card__body">
@@ -266,7 +265,7 @@
                 <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
               <figure class="voice-card__img">
-                <img src="../assets/images/common/img-voice03.jpg" alt="">
+                <img src="./assets/images/common/img-voice03.jpg" alt="">
               </figure>
             </div>
             <div class="voice-card__body">
@@ -287,7 +286,7 @@
                 <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
               <figure class="voice-card__img">
-                <img src="../assets/images/common/img-voice04.jpg" alt="">
+                <img src="./assets/images/common/img-voice04.jpg" alt="">
               </figure>
             </div>
             <div class="voice-card__body">
@@ -308,7 +307,7 @@
                 <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
               <figure class="voice-card__img">
-                <img src="../assets/images/common/img-voice05.jpg" alt="">
+                <img src="./assets/images/common/img-voice05.jpg" alt="">
               </figure>
             </div>
             <div class="voice-card__body">
@@ -329,7 +328,7 @@
                 <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
               <figure class="voice-card__img">
-                <img src="../assets/images/common/img-voice06.jpg" alt="">
+                <img src="./assets/images/common/img-voice06.jpg" alt="">
               </figure>
             </div>
             <div class="voice-card__body">
@@ -341,7 +340,6 @@
             </div>
           </article>
         </div>
-
         <!-- ページネーション -->
         <div class="archive-voice__pagination">
           <div class="wp-pagenavi">
