--- a/src/contact.html
+++ b/src/contact.html
@@ -203,7 +203,7 @@
   <!-- メイン　セクション -->
   <main>
     <section class="sub-contact layout-sub-contents ornament">
-      <div class="inner">
+      <div class="inner sub-contact__inner">
         <form id="contactForm" class="sub-contact__form form">
           <dl class="form__items">
             <div class="form__item">
