--- a/src/faq.html
+++ b/src/faq.html
@@ -203,49 +203,48 @@
   <!-- メイン　セクション -->
   <main>
     <section class="faq layout-sub-contents ornament">
-      <div class="inner">
-
+      <div class="inner faq__inner">
         <!-- 質問リスト -->
         <ul class="faq__items">
-          <li class="faq__item">
-            <p class="faq__question js-faq-accordion">ここに質問が入ります。</p>
-            <p class="faq__answer js-faq-content">
+          <li class="faq__item faq-block">
+            <p class="faq-block__question js-faq-accordion">ここに質問が入ります。</p>
+            <p class="faq-block__answer js-faq-content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </p>
           </li>
-          <li class="faq__item">
-            <p class="faq__question js-faq-accordion">ここに質問が入ります。</p>
-            <p class="faq__answer js-faq-content">
+          <li class="faq__item faq-block">
+            <p class="faq-block__question js-faq-accordion">ここに質問が入ります。</p>
+            <p class="faq-block__answer js-faq-content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </p>
           </li>
-          <li class="faq__item">
-            <p class="faq__question js-faq-accordion">ここに質問が入ります。</p>
-            <p class="faq__answer js-faq-content">
+          <li class="faq__item faq-block">
+            <p class="faq-block__question js-faq-accordion">ここに質問が入ります。</p>
+            <p class="faq-block__answer js-faq-content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </p>
           </li>
-          <li class="faq__item">
-            <p class="faq__question js-faq-accordion">ここに質問が入ります。</p>
-            <p class="faq__answer js-faq-content">
+          <li class="faq__item faq-block">
+            <p class="faq-block__question js-faq-accordion">ここに質問が入ります。</p>
+            <p class="faq-block__answer js-faq-content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </p>
           </li>
-          <li class="faq__item">
-            <p class="faq__question js-faq-accordion">ここに質問が入ります。</p>
-            <p class="faq__answer js-faq-content">
+          <li class="faq__item faq-block">
+            <p class="faq-block__question js-faq-accordion">ここに質問が入ります。</p>
+            <p class="faq-block__answer js-faq-content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </p>
           </li>
-          <li class="faq__item">
-            <p class="faq__question js-faq-accordion">ここに質問が入ります。</p>
-            <p class="faq__answer js-faq-content">
+          <li class="faq__item faq-block">
+            <p class="faq-block__question js-faq-accordion">ここに質問が入ります。</p>
+            <p class="faq-block__answer js-faq-content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </p>
           </li>
-          <li class="faq__item">
-            <p class="faq__question js-faq-accordion">ここに質問が入ります。</p>
-            <p class="faq__answer js-faq-content">
+          <li class="faq__item faq-block">
+            <p class="faq-block__question js-faq-accordion">ここに質問が入ります。</p>
+            <p class="faq-block__answer js-faq-content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </p>
           </li>
