--- a/src/price.html
+++ b/src/price.html
@@ -203,7 +203,7 @@
   <!-- メイン　セクション -->
   <main>
     <section class="sub-price layout-sub-contents ornament">
-      <div class="inner">
+      <div class="inner sub-price__inner">
         <div class="sub-price__container">
           <!-- 料金ブロック -->
           <div class="sub-price__block" id="priceLicence">
