--- a/src/index.html
+++ b/src/index.html
@@ -133,13 +133,13 @@
                 <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html#tab01">ライセンス講習</a>
+                    <a href="./information.html#info01">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html#tab03">体験ダイビング</a>
+                    <a href="./information.html#info03">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html#tab02">ファンダイビング</a>
+                    <a href="./information.html#info02">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -765,10 +765,10 @@
                   <a href="./information.html#tab01">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html#tab02">体験ダイビング</a>
+                  <a href="./information.html#tab03">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html#tab03">ファンダイビング</a>
+                  <a href="./information.html#tab02">ファンダイビング</a>
                 </li>
               </ul>
             </li>
