--- a/src/information.html
+++ b/src/information.html
@@ -206,14 +206,14 @@
       <div class="inner">
         <!-- タブメニュー -->
         <ul class="info__tab">
-          <li class="info__tab-item js-tab-button is-active"><span>ライセンス</span><span>講習</span>
+          <li class="info__tab-item js-tab-button is-active" id="tab01"><span>ライセンス</span><span>講習</span>
           </li>
-          <li class="info__tab-item js-tab-button"><span>ファン</span><span>ダイビング</span></li>
-          <li class="info__tab-item js-tab-button"><span>体験</span><span>ダイビング</span></li>
+          <li class="info__tab-item js-tab-button" id="tab02"><span>ファン</span><span>ダイビング</span></li>
+          <li class="info__tab-item js-tab-button" id="tab03"><span>体験</span><span>ダイビング</span></li>
         </ul>
         <!-- タブコンテンツ -->
         <div class="info__contents">
-          <article class="info__content js-tab-content is-active" id="tab01">
+          <article class="info__content js-tab-content is-active">
             <div class="info__body">
               <h2 class="info__title">ライセンス講習</h2>
               <p class="info__text">
@@ -224,7 +224,7 @@
               <img src="./assets/images/info/img-info01.webp" alt="ライセンス講習の様子">
             </figure>
           </article>
-          <article class="info__content js-tab-content" id="tab02">
+          <article class="info__content js-tab-content">
             <div class="info__body">
               <h2 class="info__title">ファンダイビング</h2>
               <p class="info__text">
@@ -235,7 +235,7 @@
               <img src="./assets/images/info/img-info02.webp" alt="ファンダイビングの様子">
             </figure>
           </article>
-          <article class="info__content js-tab-content" id="tab03">
+          <article class="info__content js-tab-content">
             <div class="info__body">
               <h2 class="info__title">体験ダイビング</h2>
               <p class="info__text">
